// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> renders an error if loading failed 1`] = `
<div
  className="Home"
>
  <p>
    Oops, Failed to load list!
  </p>
</div>
`;

exports[`<Home /> renders the <QuakeList /> if loading was successful 1`] = `
<div
  className="Home"
>
  <div
    className="QuakeList"
  >
    <h4>
      Quake List
    </h4>
    <ul>
      <li>
        <a
          href="/QuakeInfo/1"
          onClick={[Function]}
        >
          Welly
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Home /> renders the loading status if data invalid 1`] = `
<div
  className="Home"
>
  <p>
    Loading...
  </p>
</div>
`;

exports[`<Home /> renders the loading status if requesting data 1`] = `
<div
  className="Home"
>
  <p>
    Loading...
  </p>
</div>
`;
